test/assets/invalid/signatures/expect-atomic-not-list.hs
import Data.Char

a = chr 1
a :: [Char]